--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 			<a href="index.html" class="logo">PugSureWoi</a>
 			<ul>
 				<li>
-					<a class="home" href="index.html">Home</a>
+					<a class="home" href="index.html">El isaac</a>
 				</li>
 				<li>
 					<a class="about" href="about.html">About</a>
